# image_resize

./: .env.example  .gitattributes  .gitignore  Cargo.toml
deploy/: README.md  image_resize.cron  image_resize.service  run_cleanup.sh
docs/: api-spec.md  database-schema.md  system-overview.md  ui-spec.md
sql/: init.sql
src/: cleanup.rs  config.rs  db.rs  error.rs  fetch.rs  image_processing.rs  main.rs  r2.rs  ui.rs  upload.rs
static/: app.js  index.html  styles.css
